fix z-index in rangeInput

--- a/src/atoms/range/_range.scss
+++ b/src/atoms/range/_range.scss
@@ -107,6 +107,7 @@
 	position: absolute;
 	top: 0;
 	right: 0;
+	z-index: 0;
 	width: rhythm(5);
 }
 
